--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Resume - Natalia Faraj Murad</title>
+        <title>Natalia Faraj Murad</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -215,7 +215,7 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-file text-warning"></i></span>
-                            Silva-Brandão, K. L.; Peruchi, A.; Seraphim, N.; Murad, <b>N. F.</b>; Carvalho, R. A.; Farias, J. R.; Omoto, C.; Cônsoli, F. L.; Figueira, A.; Brandão, M. M. Loci under selection and markers associated with host plant and host-related strains shape the genetic structure of Brazilian populations of <i>Spodoptera frugiperda</i> (Lepidoptera, Noctuidae). PLoS One. v. 13, p.e0197378, 2018. [DOI: 10.1371/journal.pone.0197378] [PMID: 29787608] [PMCID: PMC5963752] 
+                            Silva-Brandão, K. L.; Peruchi, A.; Seraphim, N.; <b>Murad, N. F.</b>; Carvalho, R. A.; Farias, J. R.; Omoto, C.; Cônsoli, F. L.; Figueira, A.; Brandão, M. M. Loci under selection and markers associated with host plant and host-related strains shape the genetic structure of Brazilian populations of <i>Spodoptera frugiperda</i> (Lepidoptera, Noctuidae). PLoS One. v. 13, p.e0197378, 2018. [DOI: 10.1371/journal.pone.0197378] [PMID: 29787608] [PMCID: PMC5963752] 
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-file text-warning"></i></span>
