--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     </p>
                     <p class="paragraph">  
                             In addition to my research expertise, I have continuously pursued professional development, completing various courses in data science, genomic data analysis, Python, big data, and more.
-                            I possess advanced programming skills in R, Python, SQL, and Bash, and is proficient in tools such as Docker, Snakemake, Bioconductor, and machine learning libraries.                   
+                            I possess advanced programming skills in R, Python, SQL, and Bash, and I'm proficient in tools such as Docker, Snakemake, Bioconductor, and machine learning libraries.                   
                             With a strong foundation in bioinformatics, data analysis, and research methodologies, I am well-equipped to contribute to cutting-edge scientific projects and make significant advancements in the field of biological research.
                     </p>
                     <div class="social-icons">
