--- a/index.html
+++ b/index.html
@@ -56,17 +56,16 @@
                     </style>
                     <p class="paragraph">
                         I am a highly skilled bioinformatician and data scientist with a strong background in genetics and molecular biology.
-                        My professional journey includes working as a Postdoctoral Researcher at the Buck Institute for Research on Aging, where I focused on bioinformatics analysis of various types of data, including metabolomics, proteomics, metagenomics, scRNA-seq, bulk RNA-seq, and spatial transcriptomics.
-                        I excelled in identifying senescent biomarkers, brain disease association factors, and aging signatures.
+                        My professional journey includes working as a Postdoctoral Researcher at the Buck Institute for Research on Aging, where I focused on bioinformatics analysis of various types of omics data to identify aging signatures and biomarkers.
                     </p>
                     <p class="paragraph">
                         My expertise also extends to statistical analysis, experimental design, and the development of machine learning models and automated pipelines for large-scale data analysis.   
-                        Throughout my academic journey, I received prestigious research grants and has published numerous articles in esteemed scientific journals, including papers on probabilistic graphical models applied to biological networks and the mechanisms behind polyphagia in pest insects.<br>
+                        Throughout my academic journey, I received prestigious research grants and has published numerous articles in esteemed scientific journals.<br>
                     </p>
                     <p class="paragraph">  
-                            In addition to my research expertise, I have continuously pursued professional development, completing various courses in data science, genomic data analysis, Python, big data, and more.
-                            I possess advanced programming skills in R, Python, SQL, and Bash, and I'm proficient in tools such as Docker, Snakemake, Bioconductor, and machine learning libraries.                   
-                            With a strong foundation in bioinformatics, data analysis, and research methodologies, I am well-equipped to contribute to cutting-edge scientific projects and make significant advancements in the field of biological research.
+                        In addition to my research expertise, I have continuously pursued professional development, completing various courses in data science, genomic data analysis, Python, big data, and more.
+                        I possess advanced programming skills in R, Python, SQL, and Bash, and I'm proficient in tools such as Docker, Snakemake, Bioconductor, and machine learning libraries.                   
+                        With a strong foundation in bioinformatics, data analysis, and research methodologies, I am well-equipped to contribute to cutting-edge scientific projects and make significant advancements in the field of biological research.
                     </p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/natmurad/"><i class="fab fa-linkedin-in"></i></a>
@@ -83,7 +82,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Data Scientist & Bioinformatician</h3>
                             <div class="subheading mb-3">Buck Institute for Research on Aging</div>
-                            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+                            <p>Bioinformatics analysis of different types of data like metabolomics, scRNA-seq, bulk RNA-seq, spatial transcriptomics, metabolomics data, multiomics. Analyzing data to identify senescent biomarkers, brain disease association factors, aging signatures.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">January 2022 - Present</span></div>
                     </div>
