--- a/index.html
+++ b/index.html
@@ -186,39 +186,47 @@
                     <ul class="fa-ul mb-0" style="text-align: justify;">
                         <li>
                             <span class="fa-li"><i class="fas fa-star text-warning"></i></span>
-                        <b>Murad, N. F.</b>; Silva-Brandão, K. L.; Brandão, M. M. Mechanisms behind polyphagia in a pest insect: Responses of <i>Spodoptera frugiperda</i> (J.E. Smith) strains to preferential and alternative larval host plants assessed with gene regulatory networks. BBA Gene Regulatory Mechanisms. 2021. [DOI: 10.1016/j.bbagrm.2021.194687] [PMID: 33561559] 
+                        <b>Murad, N. F.</b>; Silva-Brandão, K. L.; Brandão, M. M. Mechanisms behind polyphagia in a pest insect: Responses of <i>Spodoptera frugiperda</i> (J.E. Smith) strains to preferential and alternative larval host plants assessed with gene regulatory networks. <i>BBA Gene Regulatory Mechanisms</i>. 2021. [DOI: 10.1016/j.bbagrm.2021.194687] [PMID: 33561559] 
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-star text-warning"></i></span>
-                        <b>Murad, N.F.</b>; Brandão,M.M. Probabilistic Graphical Models Applied to Biological Networks.In: Vischi Winck, F. (eds) Advances in Plant Omics and Systems Biology Approaches. Advances in Experimental Medicine and Biology, vol 1346. Springer, Cham. 2022. [DOI: 10.1007/978-3-030-80352-0_7] 
+                        <b>Murad, N.F.</b>; Brandão,M.M. Probabilistic Graphical Models Applied to Biological Networks.In: Vischi Winck, F. (eds) Advances in Plant Omics and Systems Biology Approaches. <i>Advances in Experimental Medicine and Biology</i>, vol 1346. Springer, Cham. 2022. [DOI: 10.1007/978-3-030-80352-0_7] 
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-file text-warning"></i></span>
-                            Ciamponi, F. E.; Procopio, D. P.; <b>Murad, N. F.</b>; Franco, T. T.; Basso, T. O.; Brandão, M. M. Multi-omics network model reveals key genes associated with p-coumaric acid stress response in an industrial yeast strain. Scientific Reports. 2022 [DOI: 10.1038/s41598-022-26843-2] [PMID: 36577778]
+                            SenNet Consortium. NIH SenNet Consortium to map senescent cells throughout the human lifespan to understand physiological health. <i>Nature Aging</i>. 2022. [DOI: 10.1038/s43587-022-00326-5] [PMID: 36936385]
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-file text-warning"></i></span>
-                            Almeida, D. A.; Horta, M. A. C.; Ferreira-Filho, J. A.; <b>Murad, N. F.</b>; De Souza, A. P. The synergistic actions of hydrolytic genes reveal the mechanism of <i>Trichoderma harzianum</i> for cellulose degradation. Journal of Biotechnology. [DOI: /10.1016/j.jbiotec.2021.05.001] [PMID: 33992696] 
+                            Markov, N. T.; Lindbergh, C. A.; Staffaroni, A. M.; Perez, K.; Stevens, M.; Nguyen, K.; <b>Murad, N. F.</b>; Fonseca, C.; Campisi, J.; Kramer, J.; Furman, D. Age-related brain atrophy is not a homogenous process: Different functional brain networks associate differentially with aging and blood factors. <i>PNAS</i>. 2022. [DOI: 10.1073/pnas.2207181119] [PMID: 36459652]
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-file text-warning"></i></span>
-                            Ferreira Filho, J. A., Horta, M. A. C., dos Santos, C. A.; Almeida, D. A.; <b>Murad, N. F.</b>; Mendes, J. S.; Sforça, D. A.; Silva, C. B. C.; Crucello, A.; Souza, A. P. Integrative genomic analysis of the bioprospection of identifying biomarkers regulators and accessory enzymes associated with cellulose degradation in a filamentous fungus (<i>Trichoderma harzianum</i>). BMC Genomics 21, 757, 2020. [DOI: 10.1186/s12864-020-07158-w] [PMID: 33138770] [PMCID: PMC7607812] 
+                            Ciamponi, F. E.; Procopio, D. P.; <b>Murad, N. F.</b>; Franco, T. T.; Basso, T. O.; Brandão, M. M. Multi-omics network model reveals key genes associated with p-coumaric acid stress response in an industrial yeast strain. <i>Scientific Reports</i>. 2022 [DOI: 10.1038/s41598-022-26843-2] [PMID: 36577778]
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-file text-warning"></i></span>
-                            Silva-Brandão, K. L; <b>Murad, N. F.</b>; Peruchi, A.; Martins, C. H. Z.; Omoto, C.; Figueira, A.; Brandão, M. M.; Trigo, J. R. Transcriptome differential co-expression reveals distinct molecular response of fall-armyworm strains. Pest Management Science. v.76, p.ps.6051, 2020. [DOI:10.1002/ps.6051] [PMID: 32815313] 
+                            Almeida, D. A.; Horta, M. A. C.; Ferreira-Filho, J. A.; <b>Murad, N. F.</b>; De Souza, A. P. The synergistic actions of hydrolytic genes reveal the mechanism of <i>Trichoderma harzianum</i> for cellulose degradation. <i>Journal of Biotechnology</i>. [DOI: /10.1016/j.jbiotec.2021.05.001] [PMID: 33992696] 
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-file text-warning"></i></span>
-                            Horta, M. A. C.; Filho, J. A. F.; <b>Murad, N. F.</b>; De Oliveira Santos, E.; Dos Santos, C. A.; Mendes, J. S.; Brandão, M. M.; Azonni, S. F.; De Souza, A. P. Network of proteins, enzymes and genes linked to biomass degradation shared by Trichoderma species. Scientific Reports. v.8, p.1341, 2018. [DOI: 10.1038/s41598-018-19671- w] [PMID: 29358662] [PMCID: PMC5778038] 
+                            Ferreira Filho, J. A., Horta, M. A. C., dos Santos, C. A.; Almeida, D. A.; <b>Murad, N. F.</b>; Mendes, J. S.; Sforça, D. A.; Silva, C. B. C.; Crucello, A.; Souza, A. P. Integrative genomic analysis of the bioprospection of identifying biomarkers regulators and accessory enzymes associated with cellulose degradation in a filamentous fungus (<i>Trichoderma harzianum</i>). <i>BMC Genomics</i> 21, 757, 2020. [DOI: 10.1186/s12864-020-07158-w] [PMID: 33138770] [PMCID: PMC7607812] 
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-file text-warning"></i></span>
-                            Silva-Brandão, K. L.; Peruchi, A.; Seraphim, N.; <b>Murad, N. F.</b>; Carvalho, R. A.; Farias, J. R.; Omoto, C.; Cônsoli, F. L.; Figueira, A.; Brandão, M. M. Loci under selection and markers associated with host plant and host-related strains shape the genetic structure of Brazilian populations of <i>Spodoptera frugiperda</i> (Lepidoptera, Noctuidae). PLoS One. v. 13, p.e0197378, 2018. [DOI: 10.1371/journal.pone.0197378] [PMID: 29787608] [PMCID: PMC5963752] 
+                            Silva-Brandão, K. L; <b>Murad, N. F.</b>; Peruchi, A.; Martins, C. H. Z.; Omoto, C.; Figueira, A.; Brandão, M. M.; Trigo, J. R. Transcriptome differential co-expression reveals distinct molecular response of fall-armyworm strains. <i>Pest Management Science</i>. v.76, p.ps.6051, 2020. [DOI:10.1002/ps.6051] [PMID: 32815313] 
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-file text-warning"></i></span>
-                            Bajay, S. K.; Cruz, M. V.; Silva, C. C.; <b>Murad, N. F.</b>; Brandão, M. M.; Souza, A. P. Extremophytes under climate change scenarios: Transcriptional coordination of genes reveals distinct selective responses to equatorial and subtropical environments. Frontiers in Plant Science. v.9, p.1376, 2018. [DOI: 10.3389/fpls.2018.01376] [PMID: 30283484] [PMCID: PMC6156123]
+                            Horta, M. A. C.; Filho, J. A. F.; <b>Murad, N. F.</b>; De Oliveira Santos, E.; Dos Santos, C. A.; Mendes, J. S.; Brandão, M. M.; Azonni, S. F.; De Souza, A. P. Network of proteins, enzymes and genes linked to biomass degradation shared by Trichoderma species. <i>Scientific Reports</i>. v.8, p.1341, 2018. [DOI: 10.1038/s41598-018-19671- w] [PMID: 29358662] [PMCID: PMC5778038] 
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-file text-warning"></i></span>
+                            Silva-Brandão, K. L.; Peruchi, A.; Seraphim, N.; <b>Murad, N. F.</b>; Carvalho, R. A.; Farias, J. R.; Omoto, C.; Cônsoli, F. L.; Figueira, A.; Brandão, M. M. Loci under selection and markers associated with host plant and host-related strains shape the genetic structure of Brazilian populations of <i>Spodoptera frugiperda</i> (Lepidoptera, Noctuidae). <i>PLoS One</i>. v. 13, p.e0197378, 2018. [DOI: 10.1371/journal.pone.0197378] [PMID: 29787608] [PMCID: PMC5963752] 
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-file text-warning"></i></span>
+                            Bajay, S. K.; Cruz, M. V.; Silva, C. C.; <b>Murad, N. F.</b>; Brandão, M. M.; Souza, A. P. Extremophytes under climate change scenarios: Transcriptional coordination of genes reveals distinct selective responses to equatorial and subtropical environments. <i>Frontiers in Plant Science</i>. v.9, p.1376, 2018. [DOI: 10.3389/fpls.2018.01376] [PMID: 30283484] [PMCID: PMC6156123]
                         </li>
                     </ul>
                 </div>
