--- a/index.html
+++ b/index.html
@@ -80,11 +80,22 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
+                            <h3 class="mb-0">Bioinformatics Specialist</h3>
+                            <div class="subheading mb-3">University of California, San Francisco</div>
+                            <p>Biological data analysis. Single-cell 10x, DAb-seq, atac, spatial transcriptomics, mito-seq. Whole exome sequencing, Olink proteomics. Mostly data from cancer patients. Model and non-model organisms.</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">March 2024 - Present</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                </div>
+            </section>
+            <hr class="m-0" />
+                        <div class="flex-grow-1">
                             <h3 class="mb-0">Data Scientist & Bioinformatician</h3>
                             <div class="subheading mb-3">Buck Institute for Research on Aging</div>
                             <p>Bioinformatics analysis of different types of data like metabolomics, scRNA-seq, bulk RNA-seq, spatial transcriptomics, metabolomics data, multiomics. Analyzing data to identify senescent biomarkers, brain disease association factors, aging signatures.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">January 2022 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">January 2022 - February 2024</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
