--- a/index.html
+++ b/index.html
@@ -82,14 +82,13 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Bioinformatics Specialist</h3>
                             <div class="subheading mb-3">University of California, San Francisco</div>
-                            <p>Biological data analysis. Single-cell 10x, DAb-seq, atac, spatial transcriptomics, mito-seq. Whole exome sequencing, Olink proteomics. Mostly data from cancer patients. Model and non-model organisms.</p>
+                            <p>Data analysis of biological data mainly from cancer patients. scRNAseq, Cite-seq, ATAC-seq, DAb-seq, mito-seq. Spatial transcriptomics. Whole exome sequencing. Olink proteomics.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">March 2024 - Present</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                </div>
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Data Scientist & Bioinformatician</h3>
+                            <h3 class="mb-0">Bioinformatics Postdoctoral Researcher</h3>
                             <div class="subheading mb-3">Buck Institute for Research on Aging</div>
                             <p>Bioinformatics analysis of different types of data like metabolomics, scRNA-seq, bulk RNA-seq, spatial transcriptomics, metabolomics data, multiomics. Analyzing data to identify senescent biomarkers, brain disease association factors, aging signatures.</p>
                         </div>
